--- a/Backen/package.json
+++ b/Backen/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "backen",
+  "name": "online",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^7.1.0",
-    "nodemon": "^2.0.22"
-  }
+      "build": "echo \"No build specified\" && exit 1",
+      "test": "echo \"No test specified\" && exit 1",
+      "start": "node index.js"
+ },
+"repository": {
+    "type": "git",
+    "url": "git+https://github.com/mohdashiq18/online.git"
+},
+"author": "",
+"license": "ISC",
+"dependencies": {
+  "cors": "^2.8.5",
+  "express": "^4.18.2",
+  "mongoose": "^7.1.0",
+  "nodemon": "^2.0.22"
+},
+"bugs": {
+    "url": "https://github.com/mohdashiq18/online/issues"
+},
+"homepage": "https://github.com/mohdashiq18/online#readme"
+
 }
+
+
