--- a/Backen/package.json
+++ b/Backen/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "online",
+  "name": "backen",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
-      "build": "echo \"No build specified\" && exit 1",
-      "test": "echo \"No test specified\" && exit 1",
-      "start": "node index.js"
- },
-"repository": {
-    "type": "git",
-    "url": "git+https://github.com/mohdashiq18/online.git"
-},
-"author": "",
-"license": "ISC",
-"bugs": {
-    "url": "https://github.com/mohdashiq18/online/issues"
-},
-"homepage": "https://github.com/mohdashiq18/online#readme"
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0",
+    "nodemon": "^2.0.22"
+  }
 }
 
 
